# instream-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.benchmarks/: baseline.txt
.claude/: settings.json
.claude/agents/: performance-regression.md  security-reviewer.md
.github/copilot/: mcp.json
.github/workflows/: ci.yml  docs.yml  release.yml
.hypothesis/constants/: 0c706532e22a4de6  291d61468287314f  339c03a11ecd3d35  39639fcc5e7a6f9f  3e60b5de4bcea04e  3f1c0b38a6d1a671  5153d540315d1f55  51f513f93b912331  52a81bfefad8e5a1  5bc9056ff2fe600b  6404026147f844fb  67bc6cc58888b572  6b50f86289604d43  6c0a0148370d83c4  6c209ef59f6620a8  6c72b875cb2551d2  6e597cf570dcf075  7580a3c5e7ad3f68  769a9db379baafae  785db4ae9aa04fcf  80d8cbe8f96311f8  818fd5792d80ab0c  848f28963ed69eaf  8c9cc3d2b61cc910  a1876c3c821f310f  a4551187c70629e0  ab08c42270b1af9b  abaed5863aa6c07e  d0828cf14a823111  d3f39e06a7ef584f  da39a3ee5e6b4b0d  df28b68cc7395483  e81fbfc924677a13  e92b4b87974325ec  e9e96464f653823f  ea58d8de47de31f3  ee8972ea683230c5  f57e6812a6385913  fbe98a22e4ab5ce8  fe66562eac648e41
app/: app.py  simulation.py
app/data/: water_polygons.geojson
app/modules/: bathymetry.py  create_model_export.py  create_model_geocode.py  create_model_grid.py  create_model_marine.py  create_model_osm.py  create_model_panel.py  create_model_reaches.py  create_model_river.py  create_model_utils.py  dashboard_panel.py  distribution_panel.py  edit_model_panel.py  environment_panel.py  geographic_conformance.py  help_panel.py  movement_panel.py  population_panel.py  redd_panel.py  setup_panel.py  spatial_panel.py
app/www/: bootstrap-icons.min.css
benchmarks/: bench_baltic.py  bench_full.py  compare_baseline.py  profile_deep.py
benchmarks/baselines/: v0.30.2-baltic-220day.json  v0.30.2-baltic-730day.json
configs/: baltic_salmon_species.yaml  example_a.yaml  example_b.yaml  example_baltic.yaml  example_byskealven.yaml  example_calibration.yaml  example_calibration_baltic.yaml  example_marine.yaml  example_minija_basin.yaml  example_morrumsan.yaml  example_simojoki.yaml  example_tornionjoki.yaml
data/calibration/: arc_i_rules.yaml  arc_i_targets.csv
data/calibration_history/: 20260420_160416_092024_nelder-mead.json
data/helcom/: grey_seal_abundance_baltic.csv
data/wgbast/: m74_ysfm_series.csv  post_smolt_survival_baltic.csv
docs/: Makefile  NETLOGO_PARITY_ROADMAP.md  api-reference.md  calibration-notes.md  hexsim-vs-instream-comparison.md  user-manual.md
docs/case-studies/: baltic-workflow.md
docs/diagnostics/: 2026-04-12-kelt-chain-diagnosis.md
docs/plans/: 2026-04-08-insalmon-design.md  2026-04-08-insalmon-implementation.md  2026-04-11-v017-phase4-calibration.md  2026-04-11-v017-plan.md  2026-04-11-v018-plan.md  2026-04-11-v019-plan.md
docs/releases/: v0.34-to-v0.41-wgbast-summary.md
docs/source/: api.rst  conf.py  index.rst
docs/validation/: v0.30.2-netlogo-comparison.md  v0.31.0-arc-D-netlogo-comparison.md  v0.33.0-ices-baltic-validation.md  v0.34.0-pspc-spec.md  v0.36.0-multi-river-baltic.md  wgbast-roadmap-complete.md
ices-mcp/: README.md  ices_mcp_server.py
ices-mcp/ices_clients/: __init__.py  gis.py  migratory.py  sag.py  sid.py  vocab.py
ices-mcp/tests/: conftest.py  test_mcp_server.py  test_migratory.py
scripts/: README.md  _add_channel_envelopes_to_sidecars.py  _add_importorskip_shiny.py  _arc_i_morris_result.csv  _atomic_writes_refactor.py  _audit_baltic_geometry.py  _audit_reach_centroids.py  _build_minija_sidecar_from_mariosupes.py  _check_wgbast_crs.py  _compare_baltic_vs_tornionjoki.py  _compare_timeseries_baltic_vs_tornionjoki.py  _diag_spawn_pipeline.py  _diag_tornionjoki_polygon_filter.py  _extend_minija_mainstem.py  _extend_minija_with_tributaries.py  _extract_minija_from_baltic.py  _extract_minija_polygons_from_dsm.py  _fetch_curonian_lagoon_osm.py  _fetch_curonian_spit_osm.py  _fetch_lithuania_coastline.py  _fetch_minija_tributaries_osm.py  _fetch_wgbast_osm_polylines.py  _fix_tornionjoki_depths.py  _generate_dane_temp_fixture.py  _generate_wgbast_configs.py  _generate_wgbast_physical_domains.py  _inspect_baltic_shp_columns.py  _inspect_osm_cache.py  _probe_arc_e_fish_trace.py  _probe_arc_e_growth.py  _probe_arc_e_redds.py  _probe_arc_f_cohort_survival.py  _probe_arc_g_cohort_compare.py  _probe_arc_h_residual_gaps.py  _probe_atmata.py  _probe_baltic_osm.py  _probe_baltic_with_dane.py  _probe_balticcoast_land_overlap.py  _probe_cell_3200_torne.py  _probe_cell_units.py  (+49 more)
src/instream/: __init__.py  cli.py  model.py  model_day_boundary.py  model_environment.py  model_init.py  sync.py
tests/: _debug_alignment.py  conftest.py  test_adult_holding.py  test_agents.py  test_app_smoke.py  test_arc_d_migration.py  test_atomic_output_hardening.py  test_backend_parity.py  test_backend_protocol_hardening.py  test_backends.py  test_baltic_geometry.py  test_batch_select_habitat_parity.py  test_bathymetry.py  test_bayesian.py  test_behavior.py  test_behavior_numba_fallback.py  test_behavioral_validation.py  test_calibration.py  test_calibration_configure.py  test_calibration_ensemble.py  test_calibration_ices.py  test_calibration_losses_hardening.py  test_calibration_multiphase.py  test_calibration_preflight.py  test_calibration_scenarios.py  test_calibration_sensitivity.py  test_calibration_surrogate.py  test_condition_projection.py  test_condition_survival.py  test_config.py  test_config_validators_hardening.py  test_create_model.py  test_create_model_export.py  test_create_model_geocode.py  test_create_model_grid.py  test_create_model_marine.py  test_create_model_osm.py  test_create_model_river.py  test_dashboard.py  test_deckgl_camelcase.py  (+97 more)
(+539 files in other folders)
