[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salmopy"
version = "0.56.18"
description = "Python conversion of inSTREAM/inSALMO 7.4 individual-based salmonid model"
authors = [{name = "Salmopy Team"}]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "geopandas>=1.0",  # uses .union_all(); .unary_union accessor deprecated in 1.0, removed in 2.0
    "mesa>=3.1",
    "meshio>=5.3",
    "networkx>=3.0",  # mesa.discrete_space.network transitive dep; not pinned by mesa itself
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyproj>=3.4",  # explicit (was transitive via geopandas); WGBAST scripts hard-depend on .to_crs(epsg=...)
    "pyyaml>=6.0",
    "requests>=2.28",  # used by scripts/generate_baltic_example.py; also test_marineregions_cache
    "scipy>=1.11",
    "shapely>=2.0",
]

[project.urls]
Homepage = "https://github.com/razinkele/instream-py"
Repository = "https://github.com/razinkele/instream-py"

[project.optional-dependencies]
numba = [
    "numba>=0.59",
]
jax = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "interpax>=0.3",
]
calibration = [
    "SALib>=1.4",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "salmopy[numba]",
    "salmopy[calibration]",
    # [frontend] deliberately NOT included: shiny-deckgl is a local/custom
    # package not on PyPI. Tests that import from app/modules skip via
    # pytest.importorskip("shiny") at their module-top.
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
frontend = [
    "shiny>=1.0",
    "shiny-deckgl>=1.9",
    "plotly>=6.0",
    "shinyswatch>=0.9",
]

[project.scripts]
salmopy = "salmopy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/salmopy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: e2e tests that drive the live Shiny app (opt-in via E2E_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["salmopy"]
omit = ["*/backends/jax_backend/*", "*/backends/numba_backend/*"]

[tool.coverage.report]
fail_under = 80
